--- a/index.html
+++ b/index.html
@@ -4,14 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Password Generator</title>
 </head>
 <body>
-    <main>
-    <div id="textbox"> </div>
-    <br> 
-    <button id="btn" onclick="submitted()"> click me to genarate random password!!</button>
-    </main>
+    <div class="video-container">
+        <video autoplay muted loop id="background-video">
+            <source id="video-source" src="./assets/video1.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+
+    <div class="container">
+        <main>
+            <div id="contain">
+                <label for="length">Password Length:</label>
+                <input type="number" id="length" name="length" min="1" value="12">
+                <br>
+                <input type="checkbox" id="lowercase" name="lowercase" checked>
+                <label for="lowercase">Include Lowercase</label>
+                <br>
+                <input type="checkbox" id="uppercase" name="uppercase" checked>
+                <label for="uppercase">Include Uppercase</label>
+                <br>
+                <input type="checkbox" id="numbers" name="numbers" checked>
+                <label for="numbers">Include Numbers</label>
+                <br>
+                <input type="checkbox" id="symbols" name="symbols" checked>
+                <label for="symbols">Include Symbols</label>
+            </div>
+            <div id="textbox"></div>
+            <br>
+            <button id="btn" onclick="submitted()">Click me to generate random password!!</button>
+        </main>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
